# fopsbackend

./: .cursorrules  .cursorrules-comprehensive  .dockerignore  .env  .env.complete  .env.google_cloud  .env.railway.example  .env.railway.minimal  .env.stripe.example  .gitignore  .railway-deploy  .replit  .rml-config.yml  AI_AGENT_ARCHITECTURE.md  AI_ARCHITECTURE.md  AI_ASSISTANTS_OVERVIEW.md  AI_IMPLEMENTATION_COMPLETE.md  AI_OCR_SETUP.md  AI_SETUP_AND_TESTING.md  API_TEST_RESULTS.md  BUILD_AND_RUN_COMMANDS.md  CHAT_SYSTEM_README.md  CLOUDFLARE_R2_SETUP.md  COMPLIANCE_API_GUIDE.md  CREATE_SAMPLE_LOADS_README.md  DATA_ISOLATION_FIXES.md  DELIVERY_API_README.md  DEPLOYMENT_SUCCESS.md  DISPATCH_MODULE_MIGRATION.md  DISPATCH_MODULE_SECURITY_AUDIT.md  Dockerfile  EMAIL_SETUP_GUIDE.md  GLOBAL_TMS_ARCHITECTURE.md  GLOBAL_TMS_PROGRESS.md  GOOGLE_CLOUD_SETUP.md  HAULPAY_INTEGRATION.md  IMPLEMENTATION_NOTES.md  INSTALL_POPPLER.md  LICENSE  LOGIN_ROUTE_FIXES.md  (+133 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: README  env.py
app/: __init__.py  main.py
app/adapters/: __init__.py  (+9 more)
backup_migrations/: 1851b353dec5_fix_drivers_table_defaults.py  189d04cb05ba_add_chat_tables.py  3f26c54b5f2a_add_truck_assignment_fields.py  811bf06e0056_fix_conversation_read_status_table.py  85fd3596193e_add_delivery_flow_fields_to_simple_loads.py  c25ffbe4a32a_update_conversations_table_schema.py  e484d4ddf4c7_initial_migration.py  fed75f48fafa_add_pickup_flow_fields.py
docs/: PORT_API_ACQUISITION_GUIDE.md
scripts/: backfill_embeddings.py  backup_database.py  check_qb_integration.py  check_tables.py  clear_railway_data.py  complete_qb_oauth.py  complete_quickbooks_oauth.py  configure_quickbooks.py  copy_neon_data.py  copy_neon_data_v2.py  create_hq_employee.py  create_test_user.py  migrate_neon_to_railway.py  restore_database.py  run_ai_task_worker.py  run_hq_employee_migration.py  run_web_learning.py  seed_demo_tenant.py  seed_knowledge_base.py  seed_rbac.py  setup_railway_db.py  test_qb_api.py  test_qb_oauth.py  test_qb_oauth_playground.py  test_quickbooks_connection.py  update_demo_load_stops.py  update_demo_locations.py  verify_hq_columns.py  verify_migration.py
templates/: drivers_import_template.csv  equipment_import_template.csv  loads_import_template.csv
tests/: test_auth.py  test_dispatch_api.py  test_dispatch_multi_tenant.py  test_dispatch_transactions.py  test_health.py  test_validation.py
(+622 files in other folders)
