[tool.poetry]
name = "freightops-backend"
version = "0.1.0"
description = "Next-generation FreightOps API built with FastAPI"
authors = ["FreightOps Engineering <engineering@freightopspro.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
psycopg = {extras = ["binary"], version = "^3.2.13"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
apscheduler = "^3.10.4"
websockets = "^12.0"
httpx = "^0.27.0"
email-validator = "^2.3.0"
boto3 = "^1.35.0"
pdfplumber = "^0.11.0"
python-docx = "^1.2.0"
psycopg2-binary = "^2.9.11"
intuit-oauth = "^1.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
aiohttp = "^3.13.2"
psutil = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

