[tool.poetry]
name = "freightops-backend"
version = "0.1.0"
description = "Next-generation FreightOps API built with FastAPI"
authors = ["FreightOps Engineering <engineering@freightopspro.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
psycopg = {extras = ["binary"], version = "^3.2.13"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
apscheduler = "^3.10.4"
websockets = "^12.0"
httpx = "^0.27.0"
email-validator = "^2.3.0"
boto3 = "^1.35.0"
pdfplumber = "^0.11.0"
python-docx = "^1.2.0"
psycopg2-binary = "^2.9.11"
intuit-oauth = "^1.2.6"
google-generativeai = "^0.8.0"
pillow = "^11.0.0"
pdf2image = "^1.16.3"
stripe = "^14.0.1"
groq = "^0.13.0"
langgraph = "^1.0.5"
langchain = "^1.2.0"
langchain-core = "^1.2.1"
slowapi = "^0.1.9"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
cryptography = "^44.0.0"
aiohttp = "^3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
aiohttp = "^3.13.2"
psutil = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

